# medical-system

./: .gitignore  APPOINTMENT_ENHANCEMENT.md  CMakeCache.txt  CMakeLists.txt  Makefile  PRESCRIPTION_IMPLEMENTATION_SUMMARY.md  README.md  cmake_install.cmake  demo_prescription.py  readme.md  test_appointment_booking.py  test_db.cpp  test_hospitalization.py  test_prescription_workflow.py  test_register.py  test_server.sh  test_single_hospitalization.py  user.db
client/: CMakeLists.txt  CMakeLists1.txt  Makefile  cmake_install.cmake  hello
client/core/database/: dbmanager.cpp  dbmanager.h
client/core/logging/: logging.h
client/core/network/: CMakeLists.txt  communicationclient.cpp  communicationclient.h  protocol.h  responsedispatcher.cpp  responsedispatcher.h  streamparser.cpp  streamparser.h
client/core/network/examples/: client_cli.cpp
client/core/network/src/: protocol.h
client/core/services/: adviceservice.cpp  adviceservice.h  appointmentservice.cpp  appointmentservice.h  attendanceservice.cpp  attendanceservice.h  authservice.cpp  authservice.h  chatservice.cpp  chatservice.h  doctorlistservice.cpp  doctorlistservice.h  doctorprofileservice.cpp  doctorprofileservice.h  evaluateservice.cpp  evaluateservice.h  hospitalizationservice.cpp  hospitalizationservice.h  medicalcrudservice.cpp  medicalcrudservice.h  medicalrecordservice.cpp  medicalrecordservice.h  medicationservice.cpp  medicationservice.h  patientappointmentservice.cpp  patientappointmentservice.h  patientservice.cpp  patientservice.h  prescriptionservice.cpp  prescriptionservice.h
client/hello_autogen/: moc_predefs.h  mocs_compilation.cpp
client/hello_autogen/3YJK5W5UP7/: qrc_resources.cpp
client/hello_autogen/AKRC6WZMME/: moc_doctorinfowidget.cpp  moc_doctorinfowidget.cpp.d
client/hello_autogen/KUE7F3CO2C/: moc_hello.cpp  moc_hello.cpp.d
client/hello_autogen/MJCUNQZLOZ/: moc_loginwidget.cpp  moc_loginwidget.cpp.d
client/hello_autogen/XKFTU44BVS/: moc_communicationclient.cpp  moc_communicationclient.cpp.d  moc_responsedispatcher.cpp  moc_responsedispatcher.cpp.d  moc_streamparser.cpp  moc_streamparser.cpp.d
client/hello_autogen/ZEUGGMGZAI/: moc_patientinfowidget.cpp  moc_patientinfowidget.cpp.d
client/resources/: doctor_appointment.qss  doctor_appointmentdetails.qss  doctor_attendance.qss  doctor_chatroom.qss  doctor_datachart.qss  doctor_profile.qss  doctor_remotedata.qss  doctorinfo.qss  login.qss  patientinfo.qss  resources.qrc  style.qss
client/ui/authdialog/: authdialog.cpp
client/ui/common/: chatbubbledelegate.cpp  chatbubbledelegate.h
client/ui/doctorinfowidget/: appointmentdetailsdialog.cpp  appointmentdetailsdialog.h  appointmentswidget.cpp  appointmentswidget.h  attendancewidget.cpp  attendancewidget.h  cancelleavewidget.cpp  cancelleavewidget.h  caseswidget.cpp  caseswidget.h  chatroomwidget.cpp  chatroomwidget.h  checkinwidget.cpp  checkinwidget.h  datachartwidget.cpp  datachartwidget.h  diagnosiswidget.cpp  diagnosiswidget.h  doctorinfowidget.cpp  doctorinfowidget.h  leavewidget.cpp  leavewidget.h  medicationselectiondialog.cpp  medicationselectiondialog.h  profilewidget.cpp  profilewidget.h  remotedatawidget.cpp  remotedatawidget.h
client/ui/hello/: hello.cpp  hello.h  hello.ui
client/ui/loginwidget/: loginwidget.cpp  loginwidget.h  loginwidget1.cpp
client/ui/patientinfowidget/: advicepage.cpp  advicepage.h  appointmentpage.cpp  appointmentpage.h  basepage.h  casepage.cpp  casepage.h  communicationpage.cpp  communicationpage.h  doctorinfopage.cpp  doctorinfopage.h  doctorlistpage.cpp  doctorlistpage.h  evaluatepage.cpp  evaluatepage.h  hospitalpage.cpp  hospitalpage.h  medicationpage.cpp  medicationpage.h  patientinfowidget.cpp  patientinfowidget.h  paymentsuccessdialog.cpp  paymentsuccessdialog.h  placeholderpages.cpp  placeholderpages.h  prescriptionpage.cpp  prescriptionpage.h  profilepage.cpp  profilepage.h  qrcodedialog.cpp  qrcodedialog.h
server/: CMakeLists.txt  CMakeLists1.txt  Makefile  cmake_install.cmake  database.h  main.cpp  main1.cpp  server  server.cpp  tcpserver.cpp
server/core/: database.cpp  tcpserver.cpp  tcpserver.h
server/core/database/: CMakeLists.txt  database.cpp  database.h  database1.cpp  database1.h  database_config.h  dbterminal.cpp  dbterminal.cpp.deprecated  dbterminal.h
server/core/logging/: logging.h
server/core/network/: CMakeLists.txt  README.md  clienthandler.cpp  clienthandler.h  communicationserver.cpp  filetransferprocessor.cpp  filetransferprocessor.h  messagerouter.cpp  messagerouter.h  protocol.h  streamparser.h
server/core/network/examples/: server_main.cpp
server/modules/chatmodule/: README.md  chatmodule.cpp  chatmodule.h
server/modules/doctormodule/assignment/: assignment.cpp  assignment.h
server/modules/doctormodule/attendance/: attendance.cpp  attendance.h
server/modules/doctormodule/profile/: profile.cpp  profile.h
server/modules/doctormodule/router/: router.cpp  router.h
server/modules/loginmodule/: loginmodule.cpp  loginmodule.h  loginrouter.cpp  loginrouter.h
server/modules/medicalcrud/: medicalcrud.cpp  medicalcrud.h
server/modules/patientmodule/advice/: advice.cpp  advice.h
server/modules/patientmodule/appointment/: appointment.cpp  appointment.h
server/modules/patientmodule/doctorinfo/: doctorinfo.cpp  doctorinfo.h
server/modules/patientmodule/doctorlist/: doctorlist.cpp  doctorlist.h
server/modules/patientmodule/evaluate/: evaluate.cpp  evaluate.h
server/modules/patientmodule/hospitalization/: hospitalization.cpp  hospitalization.h
server/modules/patientmodule/medicalrecord/: medicalrecord.cpp  medicalrecord.h
server/modules/patientmodule/medicine/: medicine.cpp  (+1 more)
server/server_autogen/: moc_predefs.h  mocs_compilation.cpp
server/server_autogen/3UNC5IPTOD/: moc_register.cpp  moc_register.cpp.d
server/server_autogen/F5YCKCVFAJ/: moc_clienthandler.cpp  moc_clienthandler.cpp.d  moc_communicationserver.cpp  moc_communicationserver.cpp.d  moc_messagerouter.cpp  moc_messagerouter.cpp.d
server/server_autogen/URL7VJ5BZG/: moc_loginmodule.cpp  moc_loginmodule.cpp.d
(+143 files in other folders)
